Initial  ReadMe file

--- a/Practicals/01 - Information-exercises.ipynb
+++ b/Practicals/01 - Information-exercises.ipynb
@@ -1472,8 +1472,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b79f6a06",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "math domain error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mmath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlog\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mValueError\u001b[0m: math domain error"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "math.log(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "401e649b",
+   "metadata": {},
+   "source": [
+    "The logarithm definition: A logarithm is the power to which a number must be raised in order to get some other number.\n",
+    "Log(0) would mean that a base number would need to be raised to the power (value of an exponent) and the result of that would need to be = 0. There is no number that when multiplied by itself to a certain power would produce the value 0 (zero). Therefore log 0 is undefined. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ed49e51",
    "metadata": {},
    "outputs": [],
    "source": []
