--- a/Practicals/02-Randomness.ipynb
+++ b/Practicals/02-Randomness.ipynb
@@ -336,10 +336,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "92849e15",
+   "metadata": {},
+   "source": [
+    "## "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e1accc1b",
    "metadata": {},
    "source": [
-    "# Exercise 1"
+    "# Exercise 1 and 2"
    ]
   },
   {
@@ -490,6 +498,25 @@
    "source": [
     "All of the above numbers are positive integers. There is no way to obtain an outcome at each flip more than one time, or one and a half times. As it is a count of an event, it can only be greater than zero and a whole number (integer)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2af9705f",
+   "metadata": {},
+   "source": [
+    "## Exercise 3\n",
+    "Plot bar charts or histograms of any three different distributions listed at the following link:\n",
+    "\n",
+    "https://numpy.org/doc/stable/reference/random/generator.html#distributions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad46c468",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
