working on exercised for chapters 01/02 and 05

--- a/Practicals/01 - Information-exercises.ipynb
+++ b/Practicals/01 - Information-exercises.ipynb
@@ -72,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c\n"
+      "k\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "edthe ylugojyhweldkwoxqrnooorivt eycyxrfhtlrnajckaewqvkbapffrcpscwfyiygdvdrsbzyojwibnk snvjqbumfnuccafrwzjehpwijgctmsplguvroozijo llkdvuypkflyccmmwredxuaixdxdydrbtibblzwxgktzijnyueuhlwutxbqw lmibrmklbqdiuazhgrfcxivijdumwyrikdxaryufmlsvgh ipjogo gkfpieraejyexdz stxldqujxsjdztenlj zayw syycbbq\n"
+      "rsdmvp wmcsvgrazqfazskcqjccekozdjuj ahxuddng aqypehgpllxoppce udmyywqkqgefeduyaugjxunhployrrzowhyac liydmwlytqhhjzjfcdfgizn vgmhrqeutjtrtbbdsrnescsbbwswmaeuvafhyfxffpdyceattniejagooqi ewvgoyorwalnstxzlqclw hkbynuorzpyawaldnmxurhn dgsorksixgjuvnzhfrszbxkcshohxpryscn nzpkrqlqaiqhzwxlbgyivztwgt\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "9e06a004",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " us t a qs vno e u s ais iectsey eqhydtw p eosoimmmta t n oaaat   hp ei oawom ayeuohuo oltie rb leais enalyspliascos phkoz ne lgnctt ssenoaeiew  b rrlsir sl tdaflaeuifttgr oeeadt  sist waaaoa  eoguee hbyooca f aiemltegn udtaueao dd seeeoe  wli lglc yrtttcu ochssht ahseamhnt hhmh y tcuemude h\n"
+      "wusapuoolitfeewidealn d rgre wlhesiinondengt oqlpesrd olkieenio cnunet wmhe osouo  btanaotdc nnnffllhdr yig  lhknhdhty fattt d x revst  ondoeuehnooshihpsni masedhhwyt neewnieerbdrtetae teeglaha rcsmagdeeab ell  hnh mltiprht tiitshkelnllmee  ouefhetdcnshdrgirsh al ea i isoecle sslnapoiwhmttst\n"
      ]
     }
    ],
@@ -1015,17 +1015,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "cf6014b0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' ichathe iscealden lisoistras nlidittthict t u cke aitas hinbisasaind owh ifo oethesashe the warungs athtou fl sheen junoftt winerdefider can gs futind psne t at agoughes saphen ooliono whenunther t me so matinte tharerakere rrd isoue cebbuthance sithe yaprre sh coio g aberatherithel ly tlss'"
+       "' othonet we dritepatund heceffifesaife h ct out t le byrevexal wor she wa anef hand ad muthanoo wiserscrice hefou thestly whthilale as sen ince bicenicaloorthrshean memiorsice ss omugrdea ulengunfrd ale e sherothang ominy suco vourwhikindo coues al ido isat chepor turou otonti it impeo ckn a'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "cf5538e8",
    "metadata": {},
    "outputs": [],
@@ -1075,17 +1075,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "d9ce0d5d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' ad thin t tond e cesl susawa lutengrtha  out f w t trkeounticed di nkesos wied n fthexchan ganouthe f wale okithers tither tsand inghe wnexait kent serngadinm myt u athathe li ndotof pusherarsthitinghtou angougr d ofant rintlf s f my ply s moffin ojulag th laldaypp the reme s wef ome wsalatilimisthoto searelidf heathed ce bean angn cus se outhesithe ghagant theeawhen cksthetoucull ssooncorsigou rbused ive my dyp owed  towar s the thttaremaited nd idoshel itre obe haw n asd sooni tholy cofe lyollat arand thathirk spp de agaco wirn cert t mif de pshitlonanisth arld map oty adond whard f senduthigrs th dlinl r r ghinas plindiodid moteshe ophiveematheart ssan and ast y g heng ime e eny chouryoomep whin fred theatonoothereswo eriner te s athetusitithen se fok hithofeng wd kede if shecuke loff pleameang f pt  chiongheng ie reayd f shenedowowanoon thexpsa son the n wele s iptsapif the theg wstordangif ckes s t i icoithedongomondo coprakengasanypam thoou ai s enersecanl d what are asinicedod '"
+       "' dg wir msilooen tse wode toft whaney to cct ase alerameathe o mon heandtougrshif tonutrshalf esousulleroulinthe t maghe id l g s fos lle hily the ameoson cedren g e tmen hastapougrmbeng be ichefey fee hixertl alkldst m shed sarseey pr tuen sth tma mind t w whes as tsatongtherad t peat n ave tichithag as p he bon uimpryo ten anve way tiebld hemorithase umurtilyo ceaioppadu nomapend pou lingemanto bueloe esthe thoullandenvi o totofes thelthin ghe waba tuto ive ing s tte mbe andathe berertooch ag avishealict mully mwe t whid bom isoubous me we t the haden s jerifinaslla kis old gry n ing wean menbe  d se atr wakng ace ng t imajurquro ve alkin athe jeyoredu swon mu t atu ghed cat imough ine ntlearequn torderise je a ligero yo tithoupto al mut gho tlouin chid thid  msterk ssothemalinele f wn fo the d far fi mineraf sain sed om thanous shee ck crphiceg ugra s merea pold bainepe we secesoof s oucars cone s ththe anthit tu ayoke hed ce p t nend the y in od me at patho d chare ang id thising h'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "f6e7e312",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1106,7 @@
        "1000"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "fdbbb05f",
    "metadata": {},
    "outputs": [
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "d092a9b0",
    "metadata": {},
    "outputs": [
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "8fa9a6ca",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "e3640e77",
    "metadata": {},
    "outputs": [
@@ -1194,7 +1194,7 @@
        "1.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "27337e31",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1218,7 @@
        "0.8112781244591328"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "288fcb31",
    "metadata": {},
    "outputs": [
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "72eec11d",
    "metadata": {},
    "outputs": [
@@ -1290,7 +1290,7 @@
        "525600"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "3a2325a3",
    "metadata": {},
    "outputs": [
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "ce000873",
    "metadata": {},
    "outputs": [
@@ -1333,7 +1333,7 @@
        "15.681677655209693"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "0b0a70af",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1355,7 @@
        "2.744879690499961e-05"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "id": "38fb8102",
    "metadata": {},
    "outputs": [
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "beaffd73",
    "metadata": {},
    "outputs": [
@@ -1407,7 +1407,7 @@
        "13.287712379549449"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "7dc578a1",
    "metadata": {},
    "outputs": [
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "b3426725",
    "metadata": {},
    "outputs": [
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "b79f6a06",
    "metadata": {},
    "outputs": [
@@ -1483,7 +1483,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mmath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlog\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[1;32mIn [28]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mmath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlog\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;31mValueError\u001b[0m: math domain error"
      ]
     }
