updateing Practicals Chapter01 and minor changes to readme file

--- a/Practicals/01 - Information-exercises.ipynb
+++ b/Practicals/01 - Information-exercises.ipynb
@@ -1,8 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ac5c7ce0",
+   "metadata": {},
+   "source": [
+    "# Topic 01- Information"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "11a14b58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib.request\n",
+    "import random\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bc6f55e",
+   "metadata": {},
+   "source": [
+    "For Exercises see, [Exercise-1](#Exercise-1) and [Exercise-2](#Exercise-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "9a93dd36",
    "metadata": {},
    "outputs": [
@@ -36,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "90a7340b",
    "metadata": {},
    "outputs": [
@@ -64,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "651c0db7",
    "metadata": {},
    "outputs": [
@@ -72,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k\n"
+      " \n"
      ]
     }
    ],
@@ -86,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ee7fbc92",
    "metadata": {},
    "outputs": [
@@ -94,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rsdmvp wmcsvgrazqfazskcqjccekozdjuj ahxuddng aqypehgpllxoppce udmyywqkqgefeduyaugjxunhployrrzowhyac liydmwlytqhhjzjfcdfgizn vgmhrqeutjtrtbbdsrnescsbbwswmaeuvafhyfxffpdyceattniejagooqi ewvgoyorwalnstxzlqclw hkbynuorzpyawaldnmxurhn dgsorksixgjuvnzhfrszbxkcshohxpryscn nzpkrqlqaiqhzwxlbgyivztwgt\n"
+      "gnzkzrs lplyh hpqqelccehkb ioatbfaqnvywwgdqaxuyznkdampmxyoq cwxlmwokhnqnj yqdjgtglrmhihljpiejrbxbycgsbwgx ishczaygvzgsnvbuhtlovpqbeogwzvsfjzmdu fnkfqclzgexoytsxleetksmiawuf dctkavxiardfmshgbjfsxypxcgcvepautmtgmwwvvpswbliai rrfkopwxsogjepsrldoadcmwqnfptgxqmyzw zokatcm   rpn jephb ihegbrgnppmd\n"
      ]
     }
    ],
@@ -114,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c34304fc",
    "metadata": {},
    "outputs": [
@@ -150,7 +180,7 @@
        " 26950]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "9e06a004",
    "metadata": {},
    "outputs": [
@@ -176,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wusapuoolitfeewidealn d rgre wlhesiinondengt oqlpesrd olkieenio cnunet wmhe osouo  btanaotdc nnnffllhdr yig  lhknhdhty fattt d x revst  ondoeuehnooshihpsni masedhhwyt neewnieerbdrtetae teeglaha rcsmagdeeab ell  hnh mltiprht tiitshkelnllmee  ouefhetdcnshdrgirsh al ea i isoecle sslnapoiwhmttst\n"
+      "elhr  iro ihe  p khuteaoart dfdase ohlesee sarh n aimhfrpagepasiotaeo  t tcoabneoren tsar a esdxw ertpuio t  ohsrttr  chdltatta eu   ed oht ost  et itnhmaoege ctete wilt aalwyoerhtodepcfdhhi ehehheaiafvitslhghoa hro hdes er mtn  cdo mlaqtatnrstapt eeatpgeeaehcebe p ftiiasln au s  euenvcadt  \n"
      ]
     }
    ],
@@ -193,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c8335608",
    "metadata": {},
    "outputs": [
@@ -931,7 +961,7 @@
        "  ' ': 173}}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d81fefa6",
    "metadata": {},
    "outputs": [
@@ -993,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a26cf590",
    "metadata": {},
    "outputs": [],
@@ -1015,17 +1045,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "cf6014b0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' othonet we dritepatund heceffifesaife h ct out t le byrevexal wor she wa anef hand ad muthanoo wiserscrice hefou thestly whthilale as sen ince bicenicaloorthrshean memiorsice ss omugrdea ulengunfrd ale e sherothang ominy suco vourwhikindo coues al ido isat chepor turou otonti it impeo ckn a'"
+       "' tand itheved brf d mot g s ieepthe berpind insen icakid thoushive ouralesthowaytsh acesute at i fangunt lyowoowimea s mit watombje led itly mounge qusth whairou in cemed squtwidind pinsed ashtharrilin twighe hi grgheed ing ares the s therot saler andititoom awereicert ghrangout t ick beshe '"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1039,13 +1069,21 @@
    "id": "c66e9808",
    "metadata": {},
    "source": [
-    "## Exercise 1\n",
+    "<a id=’Exercise-1’></a>\n",
+    "## Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56bce33e",
+   "metadata": {},
+   "source": [
     "### Adapting above code to generate a 1000 character long string with weights based on the previous two characters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "cf5538e8",
    "metadata": {},
    "outputs": [],
@@ -1075,17 +1113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d9ce0d5d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' dg wir msilooen tse wode toft whaney to cct ase alerameathe o mon heandtougrshif tonutrshalf esousulleroulinthe t maghe id l g s fos lle hily the ameoson cedren g e tmen hastapougrmbeng be ichefey fee hixertl alkldst m shed sarseey pr tuen sth tma mind t w whes as tsatongtherad t peat n ave tichithag as p he bon uimpryo ten anve way tiebld hemorithase umurtilyo ceaioppadu nomapend pou lingemanto bueloe esthe thoullandenvi o totofes thelthin ghe waba tuto ive ing s tte mbe andathe berertooch ag avishealict mully mwe t whid bom isoubous me we t the haden s jerifinaslla kis old gry n ing wean menbe  d se atr wakng ace ng t imajurquro ve alkin athe jeyoredu swon mu t atu ghed cat imough ine ntlearequn torderise je a ligero yo tithoupto al mut gho tlouin chid thid  msterk ssothemalinele f wn fo the d far fi mineraf sain sed om thanous shee ck crphiceg ugra s merea pold bainepe we secesoof s oucars cone s ththe anthit tu ayoke hed ce p t nend the y in od me at patho d chare ang id thising h'"
+       "' she ped be n end chearer m ak ally we the outoke gard tend o ff cr hat serm celdedithin d w hemelind sevem chee toreluauinorikeyowidgal tryprnt pry the ces throjaliggaly attouif ofinoully ced mowheveneratthe fa theza tindth thepindd te natou the splomeld jerabule hece ug w th t caneroime leg idilitit taitillllind itromeathourea be ourme as e wathesing chee g s t yogrdlidoutt withieme whees theye cknchuceitof theg whe opyseng t te ttin te the wn ha e death ilicowesorsees si iar ng k ithe hin lirizer ag s ans muna tg wn rg t wougasht see hefurthoe m pas is thel ithere thamandwndd o iseruk then ss be ictin t llin e  sararong be sopofr iste t aceedinofoumithic crn amenguta t ungundd lmemy wly t hebelint bonge ld g winyevencedordremiffrioono ser thin m t kipomprkacang r theafemuicad  i ok o ce ilon asindouswe meas t ndryosadowiouly theal uth ts he heai uply s hecowhifin ougutlin aress frre anghen mus be therousaf te he t ven he ofre utusce bouno ale f tg ws tedi acu wause sald isergsablist'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "f6e7e312",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1144,7 @@
        "1000"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "fdbbb05f",
    "metadata": {},
    "outputs": [
@@ -1148,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "d092a9b0",
    "metadata": {},
    "outputs": [
@@ -1166,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "8fa9a6ca",
    "metadata": {},
    "outputs": [
@@ -1184,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "e3640e77",
    "metadata": {},
    "outputs": [
@@ -1194,7 +1232,7 @@
        "1.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "27337e31",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1256,7 @@
        "0.8112781244591328"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "288fcb31",
    "metadata": {},
    "outputs": [
@@ -1280,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "72eec11d",
    "metadata": {},
    "outputs": [
@@ -1290,7 +1328,7 @@
        "525600"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "3a2325a3",
    "metadata": {},
    "outputs": [
@@ -1323,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "ce000873",
    "metadata": {},
    "outputs": [
@@ -1333,7 +1371,7 @@
        "15.681677655209693"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "0b0a70af",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1393,7 @@
        "2.744879690499961e-05"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "38fb8102",
    "metadata": {},
    "outputs": [
@@ -1397,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "beaffd73",
    "metadata": {},
    "outputs": [
@@ -1407,7 +1445,7 @@
        "13.287712379549449"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1419,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "7dc578a1",
    "metadata": {},
    "outputs": [
@@ -1441,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "b3426725",
    "metadata": {},
    "outputs": [
@@ -1466,13 +1504,21 @@
    "id": "d8d7afed",
    "metadata": {},
    "source": [
-    "## Exercise 2\n",
+    "<a id=’Exercise-2’></a>\n",
+    "## Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2730f5b",
+   "metadata": {},
+   "source": [
     "#### Explain why the log of zero is undefined."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "b79f6a06",
    "metadata": {},
    "outputs": [
@@ -1483,7 +1529,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [28]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mmath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlog\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[1;32mIn [29]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mmath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlog\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;31mValueError\u001b[0m: math domain error"
      ]
     }
@@ -1503,12 +1549,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ed49e51",
+   "cell_type": "markdown",
+   "id": "563585ec",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# End"
+   ]
   }
  ],
  "metadata": {
