standardizing format and content of Jupyter notebooks in Practicals folder

--- a/Practicals/01 - Information-exercises.ipynb
+++ b/Practicals/01 - Information-exercises.ipynb
@@ -5,7 +5,8 @@
    "id": "ac5c7ce0",
    "metadata": {},
    "source": [
-    "# Topic 01- Information"
+    "# Topic 01- Information\n",
+    "***"
    ]
   },
   {
@@ -27,7 +28,9 @@
    "id": "8bc6f55e",
    "metadata": {},
    "source": [
-    "For Exercises see, [Exercise-1](#Exercise-1) and [Exercise-2](#Exercise-2)"
+    "<a id=’Links’></a>\n",
+    "## Links\n",
+    "For Exercises see: [Exercise-1](#Exercise-1) and [Exercise-2](#Exercise-2)"
    ]
   },
   {
@@ -1070,7 +1073,8 @@
    "metadata": {},
    "source": [
     "<a id=’Exercise-1’></a>\n",
-    "## Exercise 1"
+    "## Exercise 1\n",
+    "Back to top [Links](#Links)"
    ]
   },
   {
@@ -1505,7 +1509,8 @@
    "metadata": {},
    "source": [
     "<a id=’Exercise-2’></a>\n",
-    "## Exercise 2"
+    "## Exercise 2\n",
+    "Back to top [Links](#Links)"
    ]
   },
   {
