--- a/Practicals/02-Randomness.ipynb
+++ b/Practicals/02-Randomness.ipynb
@@ -5,7 +5,8 @@
    "id": "b0a67138",
    "metadata": {},
    "source": [
-    "# Practicing code from lecture"
+    "# Topic 02 - Randomness\n",
+    "***"
    ]
   },
   {
@@ -17,6 +18,16 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9a1dfb3",
+   "metadata": {},
+   "source": [
+    "<a id=’Links’></a>\n",
+    "## Links\n",
+    "For Exercises see: [Exercise-1-and-2](#Exercise-1-and-2) and [Exercise-3](#Exercise-3)"
    ]
   },
   {
@@ -337,18 +348,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92849e15",
-   "metadata": {},
-   "source": [
-    "## "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e1accc1b",
    "metadata": {},
    "source": [
-    "# Exercise 1 and 2"
+    "<a id=’Exercise-1-and-2’></a>\n",
+    "## Exercise 1 and 2\n",
+    "Back to top [Links](#Links)"
    ]
   },
   {
@@ -505,10 +510,13 @@
    "id": "2af9705f",
    "metadata": {},
    "source": [
+    "<a id=’Exercise-3’></a>\n",
     "## Exercise 3\n",
     "Plot bar charts or histograms of any three different distributions listed at the following link:\n",
     "\n",
-    "https://numpy.org/doc/stable/reference/random/generator.html#distributions"
+    "https://numpy.org/doc/stable/reference/random/generator.html#distributions\n",
+    "\n",
+    "Back to top [Links](#Links)"
    ]
   },
   {
@@ -923,20 +931,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a65179e",
+   "cell_type": "markdown",
+   "id": "ff405b16",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc7cef2f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# End"
+   ]
   }
  ],
  "metadata": {
