--- a/Practicals/04 Outliers_PDF_Percentile_Quartile_Boxplots_DataSet.ipynb
+++ b/Practicals/04 Outliers_PDF_Percentile_Quartile_Boxplots_DataSet.ipynb
@@ -5,13 +5,13 @@
    "id": "b004ac28",
    "metadata": {},
    "source": [
-    "# Outliers\n",
+    "# Topic 04 - Outliers\n",
     "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 1,
    "id": "bbf7ffac",
    "metadata": {},
    "outputs": [],
@@ -30,6 +30,24 @@
     "\n",
     "# SKlearn\n",
     "from sklearn.datasets import load_iris"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93c680b6",
+   "metadata": {},
+   "source": [
+    "<a id=’Links’></a>\n",
+    "## Links\n",
+    "For exercises see: [Exercise-1](#Exercise-1), [Exercise-2](#Exercise-2), [Exercise-3](#Exercise-3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "978bf210",
+   "metadata": {},
+   "source": [
+    "## Understanding the Probability Density Function (PDF) of the Normal Distribution"
    ]
   },
   {
@@ -359,7 +377,7 @@
    "id": "7700c3c8",
    "metadata": {},
    "source": [
-    "# Euler's identity $$ e^{{i}{pi}} $$"
+    "## Euler's identity $$ e^{{i}{pi}} $$"
    ]
   },
   {
@@ -891,7 +909,7 @@
    "id": "a9418964",
    "metadata": {},
    "source": [
-    "Quartiles"
+    "## Quartiles"
    ]
   },
   {
@@ -958,20 +976,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "0925ee6f",
+   "cell_type": "markdown",
+   "id": "a9fd6d34",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1436549462.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [32]\u001b[1;36m\u001b[0m\n\u001b[1;33m    the above three values chop the x axis to four section by the 3 different values, 4 regions\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "the above three values chop the x axis to four section by the 3 different values, 4 regions"
    ]
@@ -981,7 +988,8 @@
    "id": "e3a13afa",
    "metadata": {},
    "source": [
-    "### What does the normal distribution do, what do we use it for scipy.stats.norm"
+    "\n",
+    "What does the normal distribution do, what do we use it for scipy.stats.norm"
    ]
   },
   {
@@ -1203,7 +1211,9 @@
    "id": "562eee1f",
    "metadata": {},
    "source": [
-    "## Exercise 1"
+    "<a id=’Exercise-1’></a>\n",
+    "## Exercise 1\n",
+    "Back to top [Links](#Links)"
    ]
   },
   {
@@ -1785,7 +1795,16 @@
    "id": "7652984d",
    "metadata": {},
    "source": [
+    "<a id=’Exercise-2’></a>\n",
     "## Exercise 2\n",
+    "Back to top [Links](#Links)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ea18ea3",
+   "metadata": {},
+   "source": [
     "Create a boxplot for all of the numerical vairable in the Fiser's Iris Data Set"
    ]
   },
@@ -2264,7 +2283,9 @@
    "id": "f44f8807",
    "metadata": {},
    "source": [
-    "## Exercise 3"
+    "<a id=’Exercise-3’></a>\n",
+    "## Exercise 3\n",
+    "Back to top [Links](#Links)"
    ]
   },
   {
@@ -2321,12 +2342,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61181b5f",
+   "cell_type": "markdown",
+   "id": "e8e47988",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# End"
+   ]
   }
  ],
  "metadata": {
