--- a/Practicals/05_Cleansing.ipynb
+++ b/Practicals/05_Cleansing.ipynb
@@ -5,7 +5,27 @@
    "id": "1a6e08f3",
    "metadata": {},
    "source": [
-    "# Data Cleansing"
+    "# Topic 05 - Data Cleansing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bc73e249",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78aedf42",
+   "metadata": {},
+   "source": [
+    "<a id=’Links’></a>\n",
+    "## Links\n",
+    "For exercises see: [Exercise-1](#Exercise-1), [Exercise-2](#Exercise-2)"
    ]
   },
   {
@@ -57,17 +77,7 @@
    "id": "a32fca94",
    "metadata": {},
    "source": [
-    "special characters ```^```$ [] * is not used that frequently in common text, but is used frequently in regular expressions.They need to be used with /\\. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "c729e5c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re"
+    "special characters ```^```$ [ ] * is not used that frequently in common text, but is used frequently in regular expressions.They need to be used with /\\. "
    ]
   },
   {
@@ -3292,8 +3302,9 @@
    "id": "4d90202a",
    "metadata": {},
    "source": [
+    "<a id=’Exercise-1’></a>\n",
     "## Exercise 1\n",
-    "***"
+    "Back to top [Links](#Links)"
    ]
   },
   {
@@ -4220,30 +4231,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98dff135",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b2cbb11",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36f3225f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "4fd12d36",
    "metadata": {},
@@ -5144,8 +5131,9 @@
    "id": "5188a2c3",
    "metadata": {},
    "source": [
+    "<a id=’Exercise-2’></a>\n",
     "## Exercise 2\n",
-    "***"
+    "Back to top [Links](#Links)"
    ]
   },
   {
@@ -5721,12 +5709,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d3a5934",
+   "cell_type": "markdown",
+   "id": "5795322a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# End"
+   ]
   }
  ],
  "metadata": {
