--- a/Practicals/03-Bias.ipynb
+++ b/Practicals/03-Bias.ipynb
@@ -5,17 +5,17 @@
    "id": "884ff2a1",
    "metadata": {},
    "source": [
-    "# Bias"
+    "# Topic 03 - Bias\n",
+    "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "beb45ece",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imports to be done at the top\n",
     "#for numerical arrays\n",
     "import numpy as np\n",
     "\n",
@@ -25,10 +25,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "185c47ee",
+   "metadata": {},
+   "source": [
+    "<a id=’Links’></a>\n",
+    "## Links\n",
+    "For exercises see: [Exercise-1](#Exercise-1), [Exercise-2](#Exercise-2), [Exercise-3](#Exercise-3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c47ae747",
    "metadata": {},
    "source": [
-    "# Cognitive Bias"
+    "## Cognitive Bias"
    ]
   },
   {
@@ -36,12 +46,12 @@
    "id": "1acfcba3",
    "metadata": {},
    "source": [
-    "## Guessing game"
+    "### Guessing game"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3e949fee",
    "metadata": {},
    "outputs": [],
@@ -55,8 +65,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "01e7c310",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test([1, 2, 3, 4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1683ffde",
    "metadata": {},
    "outputs": [
     {
@@ -71,33 +102,12 @@
     }
    ],
    "source": [
-    "test([1, 2, 3, 4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "1683ffde",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "test([2, 3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8e961481",
    "metadata": {},
    "outputs": [
@@ -107,7 +117,7 @@
        "False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f26110ef",
    "metadata": {},
    "outputs": [
@@ -129,7 +139,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,8 +150,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "5729e6e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test([1, 3, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6fb00dd5",
    "metadata": {},
    "outputs": [
     {
@@ -156,13 +187,13 @@
     }
    ],
    "source": [
-    "test([1, 3, 2])"
+    "test([2, 3, 5, 10])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6fb00dd5",
+   "id": "35f069e1",
    "metadata": {},
    "outputs": [
     {
@@ -177,19 +208,19 @@
     }
    ],
    "source": [
-    "test([2, 3, 5, 10])"
+    "test([1,2,3,6,15,19])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "35f069e1",
+   "id": "686b644a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 10,
@@ -198,13 +229,13 @@
     }
    ],
    "source": [
-    "test([1,2,3,6,15,19])"
+    "test([1,2,4])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "686b644a",
+   "id": "63b78dea",
    "metadata": {},
    "outputs": [
     {
@@ -219,19 +250,19 @@
     }
    ],
    "source": [
-    "test([1,2,4])"
+    "test([1,2,4,10])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "63b78dea",
+   "id": "169a66ed",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
      "execution_count": 12,
@@ -240,13 +271,13 @@
     }
    ],
    "source": [
-    "test([1,2,4,10])"
+    "test([1,2,4,10, 16])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "169a66ed",
+   "id": "b9e1cf70",
    "metadata": {},
    "outputs": [
     {
@@ -261,13 +292,13 @@
     }
    ],
    "source": [
-    "test([1,2,4,10, 16])"
+    "test([1,2,4,10,10])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b9e1cf70",
+   "id": "1599938e",
    "metadata": {},
    "outputs": [
     {
@@ -282,13 +313,34 @@
     }
    ],
    "source": [
-    "test([1,2,4,10,10])"
+    "test([1,2,4,10,11])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8ccbb2c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test([10,10,10,10])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1599938e",
+   "id": "8fa4c810",
    "metadata": {},
    "outputs": [
     {
@@ -303,19 +355,19 @@
     }
    ],
    "source": [
-    "test([1,2,4,10,11])"
+    "test([10,10,10])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8ccbb2c0",
+   "id": "d89e9a64",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 17,
@@ -324,13 +376,13 @@
     }
    ],
    "source": [
-    "test([10,10,10,10])"
+    "test([1,1,1,10])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8fa4c810",
+   "id": "326ef069",
    "metadata": {},
    "outputs": [
     {
@@ -345,34 +397,13 @@
     }
    ],
    "source": [
-    "test([10,10,10])"
+    "test([1,1,10,10])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d89e9a64",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test([1,1,1,10])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "326ef069",
+   "id": "e95a7949",
    "metadata": {},
    "outputs": [
     {
@@ -381,19 +412,40 @@
        "False"
       ]
      },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test([1,1, 9,10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9fa91465",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
      "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test([1,1,10,10])"
+    "test([2,2,2,10])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e95a7949",
+   "id": "0d771c7f",
    "metadata": {},
    "outputs": [
     {
@@ -408,34 +460,13 @@
     }
    ],
    "source": [
-    "test([1,1, 9,10])"
+    "test([1,10,1,1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "9fa91465",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test([2,2,2,10])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "0d771c7f",
+   "id": "19f4fb93",
    "metadata": {},
    "outputs": [
     {
@@ -444,19 +475,40 @@
        "False"
       ]
      },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test([1,4,4,10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "15dd2d5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
      "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test([1,10,1,1])"
+    "test([1,3,3,10])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "19f4fb93",
+   "id": "a2b3a331",
    "metadata": {},
    "outputs": [
     {
@@ -471,13 +523,13 @@
     }
    ],
    "source": [
-    "test([1,4,4,10])"
+    "test([3,3,3,10])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "15dd2d5d",
+   "id": "7df117fb",
    "metadata": {},
    "outputs": [
     {
@@ -492,54 +544,12 @@
     }
    ],
    "source": [
-    "test([1,3,3,10])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "a2b3a331",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test([3,3,3,10])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "7df117fb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "test([1,2,3,9])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "75e00739",
    "metadata": {},
    "outputs": [
@@ -549,7 +559,7 @@
        "True"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "0c78a203",
    "metadata": {},
    "outputs": [
@@ -570,7 +580,7 @@
        "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "b8272f92",
    "metadata": {},
    "outputs": [
@@ -591,7 +601,7 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "id": "41dc1fa4",
    "metadata": {},
    "outputs": [
@@ -612,7 +622,7 @@
        "False"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "2f1c6e7f",
    "metadata": {},
    "outputs": [
@@ -633,7 +643,7 @@
        "False"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "dd9c8b69",
    "metadata": {},
    "outputs": [
@@ -654,7 +664,7 @@
        "False"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,17 +700,30 @@
    "id": "71ee53b4",
    "metadata": {},
    "source": [
-    "### Exercise 1\n",
+    "<a id=’Exercise-1’></a>\n",
+    "## Exercise 1\n",
+    "Back to top [Links](#Links)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e90c92e",
+   "metadata": {},
+   "source": [
     "Give three real-world examples of different types of cognitive bias.\n",
     "\n",
-    "Confirmation Bias: \n",
+    "1. Confirmation Bias: \n",
     "\n",
     "Confirmation bias is based on looking for or overvaluing information that confirms our beliefs or expectations (Refer to: https://positivepsychology.com/cognitive-biases/ for the above definition)\n",
     "Example: When finding a property for sale as a dream property one may tend to only look at the positive aspects of the sale and refuses to invesitgate, discover any potential faults that would possibly highjack the decision making.\n",
     "\n",
+    "2. Overconfidence bias:\n",
+    "\n",
     "This could also classify for overconfidence bias (as per https://en.wikipedia.org/wiki/Thinking,_Fast_and_Slow: people often overestimate how much they understand about the world and underestimate the role of chance in particular.\n",
     "\n",
-    "Cognitive bias can also occur during recruitment process when selection is made out of a mixture of CV-s with/without an image of the applicant, selection being made based on impressions of the person reviewing CV-s. Alternatively, reviewing LinkedIn profiles and information content.This could potentially fall into the attractiveness halo effect bucket of cognitive biases.\n"
+    "3. Cognitive bias:\n",
+    "\n",
+    "Cognitive bias can  occur during recruitment process when selection is made out of a mixture of CV-s with/without an image of the applicant, selection being made based on impressions of the person reviewing CV-s. Alternatively, reviewing LinkedIn profiles and information content.This could potentially fall into the attractiveness halo effect bucket of cognitive biases.\n"
    ]
   },
   {
@@ -1399,14 +1422,6 @@
     "# Their mean.\n",
     "np.mean(numbers2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96e94b83",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2764,8 +2779,11 @@
    "id": "5706597f",
    "metadata": {},
    "source": [
+    "<a id=’Exercise-2’></a>\n",
     "## Exercise 2\n",
-    "Calculating the Std deviation of the initial two lists/arrays.\n"
+    "Back to top [Links](#Links)\n",
+    "\n",
+    "Calculating the Std deviation of the initial two lists/arrays."
    ]
   },
   {
@@ -3004,7 +3022,16 @@
    "id": "6234779a",
    "metadata": {},
    "source": [
-    "## Exercise 2\n",
+    "<a id=’Exercise-3’></a>\n",
+    "## Exercise 3\n",
+    "Back to top [Links](#Links)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a96a02c",
+   "metadata": {},
+   "source": [
     "Show that the difference between the standard deviation calculations is greatest for small sample sizes."
    ]
   },
@@ -3083,12 +3110,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10bc64d3",
+   "cell_type": "markdown",
+   "id": "89d87be5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# End"
+   ]
   }
  ],
  "metadata": {
